idf_component_register(SRCS 
                    "Test_I2C.c"
                    #"Test_I2C-001.c"
                    #"Test_I2C-002.c"
                    #"Test_I2C-003.c"
                    #"Test_I2C-004.c"
                    #"Test_I2C-005.c"
                    #"Test_I2C-006.c"
                    INCLUDE_DIRS ".")
